removed textarea artifacts like resize button, scrollbar, etc.  Fixed bug that would delete previously made labels #58

--- a/styles/main.css
+++ b/styles/main.css
@@ -175,6 +175,8 @@ h2 {
     background: transparent;
     line-height: 20px;
     transform-origin: left top;
+    overflow: hidden;
+    resize: none;
 }
 
 .shaking{
